--- a/button.html
+++ b/button.html
@@ -33,6 +33,28 @@
         <h1 class="col-12 text-center fw-bold">おみくじ(仮)</h1>
         <p class="text-center mt-3">食べるものをランダムに提案します</p>
         <span class="material-symbols-outlined">local_dining</span>
+        <div class="text-center mt-4 d-flex justify-content-center">
+            <div class="form-check me-3">
+                <input class="form-check-input" type="checkbox" value="和食" id="checkbox1">
+                <label class="form-check-label" for="checkbox1">和食</label>
+            </div>
+            <div class="form-check me-3">
+                <input class="form-check-input" type="checkbox" value="中華" id="checkbox2">
+                <label class="form-check-label" for="checkbox2">中華</label>
+            </div>
+            <div class="form-check me-3">
+                <input class="form-check-input" type="checkbox" value="韓国料理" id="checkbox3">
+                <label class="form-check-label" for="checkbox3">韓国料理</label>
+            </div>
+            <div class="form-check me-3">
+                <input class="form-check-input" type="checkbox" value="イタリアン" id="checkbox4">
+                <label class="form-check-label" for="checkbox4">イタリアン</label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="洋食" id="checkbox5">
+                <label class="form-check-label" for="checkbox5">洋食</label>
+            </div>
+        </div>
         <button class="col-5 btn btn-warning btn-lg mt-5" id="btn">START!</button>
         </div>
     </div>
