add random selection

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <ul>
                                 <li id="dish1">メニュー名1</li>
                                 <li id="dish2">メニュー名2</li>
-                                <li>メニュー名3</li>
+                                <li id="dish3">メニュー名3</li>
                                 </ul>
                             </div>
                         </div>
