add text for each genre

--- a/button.html
+++ b/button.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ボタン</title>
+    <title>RANDOM DISH</title>
     <!-- Destyle CSS -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@4.0.1/destyle.min.css">
     <!-- Bootstrap CSS -->
@@ -21,7 +21,7 @@
     <div class="background">
         <div class="container d-flex justify-content-center align-items-center vh-100">
             <div class="row justify-content-center">
-                <h1 class="col-12 text-center title">RONDOM DISH</h1>
+                <h1 class="col-12 text-center title">RANDOM DISH</h1>
                 <p class="text-center mt-4 mb-4">食べたい料理ジャンルを選んでください。<br>メニューをご提案します！</p>
                 <span class="material-symbols-outlined">local_dining</span>
 
